trunk/Archive2/5c/b71c5efc9c1a63/output
main.cpp:15:1: error: static_assert failed ""
static_assert(Exists<void, int>::value, "");
^             ~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
